--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>AppName</title>
+	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
